--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
 
                 <div class="event-text">
                     <h3>Hội An lần 2</h3>
-                    <p>Sắp chia tay (hụt), bé trao anh một cơ hội mới</p>
+                    <p>Suýt chia tay, bé trao anh một cơ hội mới</p>
                 </div>
             </div>
         </div>
@@ -361,7 +361,7 @@
 
                 <div class="event-text">
                     <h3>Hòa Bắc</h3>
-                    <p>Hôm nay lạnh mà chụp quay nhiều</p>
+                    <p>Hôm đó lạnh mà chụp quay nhiều</p>
                 </div>
             </div>
         </div>
@@ -465,7 +465,7 @@
 
                 <div class="event-text">
                     <h3>Huế</h3>
-                    <p>Đi hoài</p>
+                    <p>Đi hoài hong chán</p>
                 </div>
             </div>
         </div>
@@ -490,7 +490,7 @@
                 <img src="z7530356912484_cf329ec844b1c129f792e55393156651.jpg" class="event-img" alt="Kỷ niệm">
 
                 <div class="event-text">
-                    <h3>Xóm mèo</h3>
+                    <h3>Xóm mèo lần đầu</h3>
                     <p>Bé thích con mèo nhỏ</p>
                 </div>
             </div>
@@ -585,4 +585,5 @@
         }
     </script>
 </body>
+
 </html>
